# GodotTest

./: Cargo.toml  Character.gd  Character.gdnlib  Character.gdns  Fibonacci.tscn  Floor.vs  GDscript.gd  README.md  Rust.gdns  Test.tscn  fibonacci.gdnlib  project.godot  rust.bmp.import
.import/: hmnzlir5.bmp-1821107f784cb79c033bfb2d066a5eef.stex  rust.bmp-c9c1798be072ea15648ad7b6498479f9.md5
src/: character.rs  fibonacci.rs
