[package]
name = "Test"
version = "0.1.0"
authors = ["Mike White <botahamec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "character"
#path = "src/character.rs"
#crate-type = ["cdylib"]

[lib]
name = "fibonacci"
path = "src/fibonacci.rs"
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.7.0"